# Rqpdf

./: DESCRIPTION  NAMESPACE  Notes.md  README.md  TODO.md  configure  configure.in
R/: dotCall.R  fileVersion.R  forms.R  images.R  links.R  meta.R  numPages.R  qpdf.R  qpdfObject.R  utils.R
man/: getAllDicts.Rd  getFormValues.Rd  getMetadata.Rd  getPages.Rd  getRoot.Rd  numPages.Rd  qpdf.Rd  version.Rd
src/: Makevars.in  Rqpdf.h  expt.cc  fileVersion.cc  formValues.cc  images.cc  info.cc  qpdfData.cc  qpdfObjectHandle.cc  qpdfWriter.cc
tests/: warnings.R
